cnd/cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedIdentifierTest/iz149285.cpp
#undef MUL
#define ADD
#include "iz149285.h"

#undef ADD
#define MUL
#include "iz149285.h"
